--- a/wp-content/plugins/elementor/assets/lib/font-awesome/css/solid.css
+++ b/wp-content/plugins/elementor/assets/lib/font-awesome/css/solid.css
@@ -7,8 +7,8 @@
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src: url("httpdorisjewelry.github.io/wp-admin/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot");
-  src: url("httpdorisjewelry.github.io/wp-admin/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot#iefix") format("embedded-opentype"), url("httpdorisjewelry.github.io/wp-admin/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff2") format("woff2"), url("httpdorisjewelry.github.io/wp-admin/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff") format("woff"), url("httpdorisjewelry.github.io/wp-admin/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.ttf") format("truetype"), url("httpdorisjewelry.github.io/wp-admin/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
+  src: url("http/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot");
+  src: url("http/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot#iefix") format("embedded-opentype"), url("http/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff2") format("woff2"), url("http/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff") format("woff"), url("http/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.ttf") format("truetype"), url("http/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
 
 .fa,
 .fas {
